name:                Genbank
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             1.0.0
synopsis:            Libary for parsing NCBI genbank format
description:         Currently contains parsers and datatypes for: genbank
                     
license:             GPL
license-file:        LICENSE
author:              Florian Eggenhofer
maintainer:          egg@tbi.univie.ac.at
-- copyright:           
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/eggzilla/Genbank

source-repository this
  type:     git
  location: https://github.com/eggzilla/Genbank/tree/v1.0.0
  tag:      v1.0.0

library
  -- Modules exported by the library.
  exposed-modules:   Bio.GenbankParser, Bio.GenbankData, Bio.GenbankTools
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.5 && <5, parsec, split, bytestring, biocore, biofasta
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
