name:                Genbank
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             2.0.0
synopsis:            Libary for processing the NCBI genbank format
description:         Haskell cabal Genbank libary contains tools, parser and datastructures for the NCBI (National Center for Biotechnology Information) Genbank format.
                     .
                     For more information on genbank refer to: <http://www.ncbi.nlm.nih.gov/genbank/>
                     .
                     For a sample genbank record see: <http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html>
                     .
                     "Biobase.Genbank.Types" - Datastructures for Genbank format 
                     .
                     Contains Haskell datastructures for Genbank format and for contained features, subfeatures
                     .
                     "Biobase.Genbank.Import" - Parse Genbank format
                     .
                     Contains Haskell functions to parse Genbank format from files or internal Strings.
                     .
                     "Biobase.Genbank.Tools" - Tools for processing Genbank 
                     .
                     Contains Haskell functions to extract nucleotide sequences for features 
extra-source-files:
  README.md
                     
license:             GPL-3.0
license-file:        LICENSE
author:              Florian Eggenhofer
maintainer:          egg@informatik.uni-freiburg.de
-- copyright:           
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/eggzilla/Genbank

source-repository this
  type:     git
  location: https://github.com/eggzilla/Genbank/tree/2.0.0
  tag:      2.0.0

library
  -- Modules exported by the library.
  exposed-modules:   Biobase.Genbank.Import, Biobase.Genbank.Types, Biobase.Genbank.Tools, Biobase.Genbank.Export
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.5 && <5, parsec, split, bytestring, biocore, biofasta, BiobaseEnsembl, vector
  ghc-options: -Wall -O2

  -- Directories containing source files.
  hs-source-dirs:      .
  
executable GenbankConverter
  main-is:          Converter.hs
  build-depends:    base >= 4 && <= 5, cmdargs, Genbank, BiobaseEnsembl, either-unwrap
  ghc-options: -Wall -O2
  hs-source-dirs:      Biobase/Genbank
