name:                Genbank
version:             2.2.0
synopsis:            Libary for processing the NCBI genbank format
description:         Haskell cabal Genbank libary contains tools, parser and datastructures for the NCBI (National Center for Biotechnology Information) Genbank format.
                     .
                     For more information on genbank refer to: <http://www.ncbi.nlm.nih.gov/genbank/>
                     .
                     For a sample genbank record see: <http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html>
                     .
                     "Biobase.Genbank.Types" - Datastructures for Genbank format 
                     .
                     Contains Haskell datastructures for Genbank format and for contained features, subfeatures
                     .
                     "Biobase.Genbank.Import" - Parse Genbank format
                     .
                     Contains Haskell functions to parse Genbank format from files or internal Strings.
                     .
                     "Biobase.Genbank.Tools" - Tools for processing Genbank 
                     .
                     Contains Haskell functions to extract nucleotide sequences for features 
extra-source-files:
  README.md
                     
license:             GPL-3.0
license-file:        LICENSE
author:              Florian Eggenhofer
maintainer:          egg@informatik.uni-freiburg.de
-- copyright:           
category:            Bioinformatics
build-type:          Simple
cabal-version:       >= 1.10.0
tested-with:         GHC == 8.6.5
Extra-Source-Files:
        README.md ChangeLog.md


source-repository head
  type:     git
  location: https://github.com/eggzilla/Genbank

source-repository this
  type:     git
  location: https://github.com/eggzilla/Genbank/tree/2.2.0
  tag:      2.2.0

library
  -- Modules exported by the library.
  exposed-modules:   Biobase.Genbank.Import, Biobase.Genbank.Types, Biobase.Genbank.Tools, Biobase.Genbank.Export
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.5 && <5, parsec, split, bytestring, BiobaseEnsembl == 0.2.0.1, vector, BiobaseTypes == 0.2.0.*, BiobaseFasta == 0.3.0.*
  ghc-options: -Wall -O2
  default-language:    Haskell2010
  -- Directories containing source files.
  hs-source-dirs:      .
  
executable GenbankConverter
  main-is:          Converter.hs
  build-depends:    base >= 4 && <= 5, cmdargs, Genbank, BiobaseEnsembl, either-unwrap, cmdargs
  ghc-options: -Wall -O2
  default-language:    Haskell2010
  other-modules:       Paths_Genbank
  hs-source-dirs:      Biobase/Genbank

executable GenbankSequenceExtractor
  main-is:          SequenceExtractor.hs
  build-depends:    base >= 4 && <= 5, cmdargs, Genbank, BiobaseEnsembl, either-unwrap, BiobaseTypes == 0.2.0.*, BiobaseFasta == 0.3.0.*, bytestring, cmdargs
  ghc-options: -Wall -O2
  default-language:    Haskell2010
  other-modules:       Paths_Genbank
  hs-source-dirs:      Biobase/Genbank
